# sra

./: .gitignore  LICENSE_THIRD_PARTY.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md
src/sra/: __init__.py  audit_modes.py  cli.py  dev_tools.py  output.py  report.py  skill_loader.py  skill_registry.py
src/sra/prompts/: fingerprint_system.md  fingerprint_user.md
src/sra/sensors/ast-grep/: audit-access-control.json  audit-business-logic.json  audit-client-side.json  audit-concurrency-race.json  audit-config-deployment.json  audit-crypto-auth.json  audit-file-boundary.json  audit-input-validation.json  audit-memory-safety.json  audit-network-protocol.json  audit-parser-state-machine.json  audit-server-side-injection.json  audit-supply-chain.json
src/sra/sensors/ripgrep/: audit-access-control.json  audit-agentic-ai.json  audit-business-logic.json  audit-client-side.json  audit-concurrency-race.json  audit-config-deployment.json  audit-crypto-auth.json  audit-file-boundary.json  audit-input-validation.json  audit-memory-safety.json  audit-network-protocol.json  audit-parser-state-machine.json  audit-server-side-injection.json  audit-smart-contracts.json  audit-supply-chain.json
src/sra/skills/access-control/: SKILL.md
src/sra/skills/audit-context-building/: SKILL.md
src/sra/skills/audit-context-building/resources/: COMPLETENESS_CHECKLIST.md  OUTPUT_REQUIREMENTS.md
src/sra/skills/audit-synthesis/: SKILL.md
src/sra/skills/business-logic/: SKILL.md
src/sra/skills/client-side/: SKILL.md
src/sra/skills/concurrency-race/: SKILL.md
src/sra/skills/crypto-auth/: SKILL.md
src/sra/skills/file-boundary/: SKILL.md
src/sra/skills/input-validation/: SKILL.md
src/sra/skills/memory-safety/: SKILL.md
src/sra/skills/network-protocol/: SKILL.md
src/sra/skills/parser-state-machine/: SKILL.md
src/sra/skills/property-based-testing/: SKILL.md
src/sra/skills/server-side-injection/: SKILL.md
src/sra/skills/spec-to-code-compliance/: SKILL.md
